# RaspberryPicoSDK_Template

./: .gitignore  .gitmodules  BUILD  CMakeLists.txt  README.md  WORKSPACE  script.sh
lib/: BUILD  CMakeLists.txt  rasp_pico.cpp  rasp_pico.h  some_lib.cpp  some_lib.hpp
raspPico/: BUILD  fake.h
src/: BUILD  CMakeLists.txt  main.cc
unit_test/: BUILD  test_some_lib.cpp
